rm useless codes